--- a/assets/css/sass/utils/_mixins.scss
+++ b/assets/css/sass/utils/_mixins.scss
@@ -87,8 +87,6 @@
 @mixin grid-cell($multiplier: 1, $overwrite: 0) {
   $spacing: $base-spacing * $multiplier;
 
-  // todo: implement tablet
-
   @for $i from 1 through 24 {
     $total: if($overwrite > 0, $overwrite, $i);
 
@@ -112,32 +110,39 @@
   }
 }
 
-@mixin slant {
+@mixin polaroid-grid {
   $rotate: (
     1: -5,
     2: 4,
     3: -2,
     4: 6,
-    5: 3
+    0: 3
   );
-  $translate: (
+  $transpost: (
     1: 16,
     2: -20,
-    3: 16
+    0: 16
   );
-  @for $row from 1 through 6 {
-    &:nth-child(#{$row}) {
-      .post-panel {
-        @for $i from 1 through 24 {
-          $remainder: $row - 1 % 3;
-          $tilt: map-get($rotate, $remainder + $i);
 
-          &:nth-child(#{$i}) {
-            @include transition-transform;
-            transform: rotate(#{$tilt}deg) translate(0, #{map-get($translate, $i)}px);
+  .post-panel-wrapper {
+    @for $i from 1 through 24 {
+      $translate: map-get($transpost, $i % 3);
+      $tilt: map-get($rotate, $i % 5);
+
+      &:nth-child(#{$i}) {
+        a {
+          @include transition-transform;
+          transform: rotate(#{$tilt}deg);
+
+          &:hover {
+            transform: rotate(calc(#{$tilt}deg + 1deg));
+          }
+
+          @include susy-media($desktop) {
+            transform: rotate(#{$tilt}deg) translate(0, #{$translate}px);
 
             &:hover {
-              transform: rotate(calc(#{$tilt}deg + 1deg)) translate(0, calc(#{map-get($translate, $i)}px - 3px));
+              transform: rotate(calc(#{$tilt}deg + 1deg)) translate(0, calc(#{$translate}px - 3px));
             }
           }
         }
